fix(ui): fixed the overlap of follow us icons on hover

--- a/app/assets/stylesheets/footer.scss
+++ b/app/assets/stylesheets/footer.scss
@@ -15,6 +15,7 @@
 .footer-column {
   padding-bottom: 15px;
   padding-top: 15px;
+  margin-bottom: 15px;
 }
 
 .footer-logo {
